# tkMandelbrotSet

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yml
src/tkMandelbrotSet/: Mandelbrot.py  Mandelbrot.pyproj  Mandelbrot.sln  bigraph.py  exceptions.py  main.py  mandelbrot.py  mandelbrot_set_app.py  mandelbrot_set_model.py  memento.py  view_manager.py
src/tkMandelbrotSet/Documentation/: Developer_Documentation.md
src/tkMandelbrotSet/Help/tkMandelbrotSet/: MandelbrotSetApp_HelpFile.txt
tests/: test_bigraph.py  test_mandelbrot_set.py  test_mandelbrot_set_app.py  test_mandelbrot_set_model.py  test_memento.py
