[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/tkMandelbrotSet/*.py"]
source-includes = ["tests/", "src/tkMandelbrotSet/Documentation/*","src/tkMandelbrotSet/Help/*","src/tkMandelbrotSet/Mandelbrot.sln", "src/tkMandelbrotSet/Mandelbrot.pyproj"]

[tool.pdm.build.wheel-data]
# Recursively install all files from Help/ to the $prefix/data directory,
# while preserving the directory structure (thanks to relative-to).
# We make the destination paths relative to "."
# to preserve the exact same directory structure in the destination:
# Help/help_1.txt -> $prefix/Help/help_1.txt
# data = [{path = "src/tkMandelbrotSet/Help/**/*", relative-to = "."}]
data = [{path = "src/tkMandelbrotSet/Help/**/*", relative-to = "src/tkMandelbrotSet/"}]

[project]
name = "tkMandelbrotSet"
version = "1.0.0"
dependencies = [
	"tkAppFramework>=0.9.3",
	"matplotlib>=3.10.8"
]
authors = [
  { name="Kevin R. Geurts", email="kevin.r.geurts@gmail.com" },
]
description = "The tkMandelbrotSet package provides a tkinter application for visualizing and interacting with the Mandelbrot set."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["desktop", "GUI", "mandelbrot", "fractal"]

[project.urls]
Homepage = "https://github.com/KevinRGeurts/tkMandelbrotSet"
Issues = "https://github.com/KevinRGeurts/tkMandelbrotSet/issues"
